data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1499.wast
;; 10. **Conditional Escape to Unreachable:**    - **Test Description:** Create a function that conditionally either performs a valid operation or jumps to an `unreachable` instruction based on an immediate condition.    - **Constraint Checked:** Ensures that the function correctly traps or continues operation depending on the branch taken.    - **Improper Handling Aspect:** Verifies proper branching logic handling and immediate trapping with `unreachable`, bypassing invalid function return or call continuation.

(assert_invalid
  (module (func $conditional-escape (result i32)
    (if (i32.const 0) (then (unreachable)) (else (i32.const 42)))
  ))
  "type mismatch"
)